--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ script: meteor --test --release velocity:METEOR@1.1.0.2_2
 cache:
   directories:
   - ~/.meteor
-  - .meteor/local
+#  - .meteor/local
