adding new ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
-sudo: required
-install: curl https://install.meteor.com/ | sh
-script: meteor --test --release velocity:METEOR@1.1.0.2_2
-cache:
-  directories:
-  - ~/.meteor
+language: node_js
+node_js:
+  - "0.10"
+before_install:
+  - "curl -L http://git.io/3l-rRA | /bin/sh"
+services:
+  - mongodb
+env:
+  - LAIKA_OPTIONS="-t 5000"
+
+#sudo: required
+#install: curl https://install.meteor.com/ | sh
+#script: meteor --test --release velocity:METEOR@1.1.0.2_2
+#cache:
+#  directories:
+#  - ~/.meteor
 #  - .meteor/local
